--- a/applet/build.gradle
+++ b/applet/build.gradle
@@ -142,7 +142,7 @@ javacard {
 
             //noinspection GroovyAssignabilityCheck
             applet {
-                className 'applet.MainApplet'
+                className 'applet.HelloWorldApplet'
                 aid '01:ff:ff:04:05:06:07:08:09:01:02'
             }
 
