--- a/applet/build.gradle
+++ b/applet/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.1.1'
     testImplementation 'org.bouncycastle:bcprov-jdk15on:1.70'
     testImplementation 'org.bouncycastle:bcpkix-jdk15on:1.70'
+    testImplementation 'at.favre.lib:hkdf:1.1.0'
 
 
     testImplementation(group: 'com.klinec', name: 'javacard-tools', version: '1.0.4') {
